# pyfrancagen

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  gradleDocker.sh
cpp/: main_audio.cpp  main_test.cpp  serializer.cpp  serializer.h  utest.cpp  utest_audio.cpp  utest_test.cpp  utest_trace.cpp
icc/: generate_icc.py
icc/fidl/: IccCommonTypes.fidl  README.md  avb_test.fidl
icc/templates/: boilerplate.txt  class.tpl  classheader.tpl
lbs/: generate_lbs.py
lbs/doxygen/: Doxyfile
lbs/fidl/: IccCommonTypes.fidl  avb_audio.fidl  avb_test.fidl
lbs/fidl/hmi/speechservice/: SpeechOutput.fidl
lbs/src_gen/: franca_types.h
lbs/templates/: class.tpl  classheader.tpl
